fix: layout bugfixes relating to cohere docs

--- a/packages/ui/components/.storybook/variables.css
+++ b/packages/ui/components/.storybook/variables.css
@@ -30,7 +30,7 @@
     --accent-tinted: 55, 111, 32;
     --background: 255, 255, 255;
     --accent-contrast: 255, 255, 255;
-    --card-background: rgba(255, 255, 255, 70%);
+    --bg-color-card: rgba(255, 255, 255, 70%);
     --sidebar-background: transparent;
     --header-background: transparent;
     --border: var(--grayscale-a5);
@@ -64,7 +64,7 @@
     --accent-tinted: 191, 255, 165;
     --background: 0, 0, 0;
     --accent-contrast: 0, 0, 0;
-    --card-background: var(--grayscale-a2);
+    --bg-color-card: var(--grayscale-a2);
     --sidebar-background: transparent;
     --header-background: transparent;
     --border: var(--grayscale-a5);
